bugfix - chrome scrollbar

--- a/app/static/css/floor.css
+++ b/app/static/css/floor.css
@@ -10,6 +10,7 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
+    overflow: hidden;
 }
 
 * {
